[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Bottle.png" type="Texture" id=1]
[ext_resource path="res://str/Actors/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/222557__raremess__cardboard-burning-2.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Size_changing"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.318641, 2.54912 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "dade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 25.4105

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 16
script = ExtResource( 2 )

[node name="Bottle" type="Sprite" parent="."]
scale = Vector2( 0.114289, 0.114289 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Size_changing = SubResource( 1 )
anims/dade_in = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2.35969, 2.59566 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
